--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,31 @@
-cmake_minimum_required(VERSION 2.8.3)
-
+cmake_minimum_required(VERSION 3.8)
 project(mevius)
 
-find_package(catkin REQUIRED COMPONENTS
-  message_generation
-  std_msgs
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+
+find_package(ament_cmake REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+#find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+
+find_package(rosidl_default_generators REQUIRED)
+
+set(msg_files
+  "msg/MeviusLog.msg"
+  DEPENDENCIES std_msgs
+
 )
 
-add_message_files(
-  FILES
-  MeviusLog.msg
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/MeviusLog.msg"
+  DEPENDENCIES std_msgs
+
 )
 
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
+ament_export_dependencies(rosidl_default_runtime)
 
-catkin_package()
-
-find_package(roslaunch)
-
-foreach(dir launch models)
-  install(DIRECTORY ${dir}/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
-endforeach(dir)
+ament_package()
